# eros

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: chat.py
